--- a/_server/package.json
+++ b/_server/package.json
@@ -23,7 +23,8 @@
     "grunt-open": "~0.2.0",
     "matchdep": "~0.1.1",
     "grunt-contrib-jade": "~0.5.0",
-    "grunt-parallel": "0.0.3"
+    "grunt-parallel": "0.0.3",
+    "markdown": "0.4.0"
   },
   "engines": {
     "node": ">=0.8.0"
