--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "jshint-stylish": "^0.1.5",
     "compass-options": "^0.1.1",
     "browser-sync": "^0.7.4",
-    "gulp-shell": "^0.2.4"
+    "gulp-shell": "^0.2.4",
+    "walk": "^2.3.1",
+    "jsonfile": "^1.1.1",
+    "gulp-watch": "^0.5.4",
+    "gulp-plumber": "^0.6.1"
   }
 }
