--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "gulp-jshint": "^1.5.1",
     "jshint-stylish": "^0.1.5",
     "compass-options": "^0.1.1",
-    "browser-sync": "^0.7.4",
+    "browser-sync": "^0.8.0",
     "gulp-shell": "^0.2.4",
     "walk": "^2.3.1",
     "jsonfile": "^1.1.1",
     "gulp-watch": "^0.5.4",
-    "gulp-plumber": "^0.6.1"
+    "gulp-plumber": "^0.6.1",
+    "chalk": "^0.4.0",
+    "event-stream": "^3.1.2",
+    "gulp-util": "^2.2.14",
+    "gulp-subtree": "^0.1.0",
+    "gulp-filter": "^0.4.1",
+    "gulp-load": "^0.1.1",
+    "require-dir": "^0.1.0"
   }
 }
