--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "gulp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "js-yaml": "^3.0.2"
+  },
   "devDependencies": {
     "gulp": "^3.6.0",
     "gulp-jshint": "^1.5.1",
