--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "gulp",
   "version": "0.0.0",
   "dependencies": {
-    "js-yaml": "^3.0.2"
+    "js-yaml": "^3.0.2",
+    "fs-extra": "^0.8.1"
   },
   "devDependencies": {
     "gulp": "^3.6.0",
@@ -22,6 +23,7 @@
     "gulp-filter": "^0.4.1",
     "gulp-load": "^0.1.1",
     "require-dir": "^0.1.0",
-    "underscore.string": "^2.3.3"
+    "underscore.string": "^2.3.3",
+    "gulp-clean": "^0.2.4"
   }
 }
