--- a/pages/about.yml
+++ b/pages/about.yml
@@ -1,21 +1,12 @@
-template:
-  name: flow
-  source: layout
-flow:
-  jumbotron:
-    name: leaderboard--16x9
-    source: components
-  flow-items:
-    item-1:
-      name: placeholder
-      source: style-prototypes
-    item-2:
-      name: placeholder
-      source: style-prototypes
-  aside-item:
-    item-1:
-      name: placeholder
-      source: style-prototypes
-content:
-  image: images/foo.jpg
-  header: Hello World
+includes:
+  header:
+    name: header
+    source: layouts
+  main:
+    name: flow
+    source: layouts
+overrides:
+  layouts:
+    jumbotron:
+      image: http://www.placecage.com/300/200
+      title: Crazy Cage
