Ignore Gulpfile and package.json

--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "node_modules",
     "bower_components",
     "test",
-    "tests"
+    "tests",
+    "Gulpfile.js",
+    "package.json"
   ],
   "dependencies": {
     "angular": "~1.2.16",
