--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "gulp": "^3.6.0",
     "gulp-uglify": "^0.2.1",
-    "gulp-concat": "^2.2.0"
+    "gulp-concat": "^2.2.0",
+    "gulp-shell": "^0.2.5"
   }
 }
