--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "style-prototype",
-  "version": "2.0.0-alpha.20",
+  "version": "2.0.0",
   "ignore": [
     "**/.*",
     "node_modules",
